Fiz alguns ajustes para funcionar melhor em dispositivs móveis, criei o arquivo style e removi todo o css do index e movi o link que chama o script para o final do index antes do fechamento do body.

--- a/index.html
+++ b/index.html
@@ -2,48 +2,9 @@
 <html lang="pt-br">
 <head>
 	<meta charset="utf-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<title>Estoure as Bolas</title>
-	<style type="text/css">
-		body {
-			margin: 0;
-			padding: 0;
-		}
-		.container {
-			width: 550px;
-			margin: auto;
-		}
-		.bola {
-			width: 25px;
-			height: 25px;
-			background-color: green;
-			border-radius: 25px;
-			position: absolute;
-		}
-		.containerBolas {
-			background-color: black;
-			width: 550px;
-			height: 450px;
-			margin: 20px 0;
-			position: relative;
-		}
-		button {
-			border: none;
-			padding: 10px;
-			text-align: center;
-			color: white;
-			background-color: #444;
-		}
-		button:hover {
-			opacity: 0.8;
-		}
-		.iniciar {
-			background-color: green;
-		}
-		.parar {
-			background-color: red;
-		}
-	</style>
-	<script type="text/javascript" src="script.js"></script>
+	<link rel="stylesheet" type="text/css" href="style.css">
 </head>
 <body>
 
@@ -58,5 +19,6 @@
 
 	</div>
 
+	<script type="text/javascript" src="script.js"></script>
 </body>
 </html>
